# CalculationOrbits

./: docker-compose.yml  go.mod
astro_service/: Dockerfile  astra.py  main.py  pyproject.toml  reguirements.txt  requirements.txt  schemes.py  test_main.py  СometApproach.py
astro_service/app/: main.py
astro_service/astra/: astra.py
backend/: .env  Dockerfile  go.mod  go.sum
backend/cmd/: main.go
backend/internal/calculationCometService/: orm.go  repository.go  service.go
backend/internal/db/: db.go
backend/internal/handlers/: calculationHendler.go
frontend/app/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/app/src/: App.css  App.js  index.css
frontend/app/src/api/: apiClient.js  endpoints.js
frontend/app/src/components/: Header.js  History.js  ObservationsForm.css  ObservationsForm.js  OrbitData.js  OrbitVisualization.js
frontend/app/src/components/ObservationsForm/: ImageUploader.js  ObservationInput.js  ObservationsForm.js
nginx/: nginx.conf
