[project]
name = "astro-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy==7.1.1",
    "astropy-iers-data==0.2025.10.20.0.39.8",
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "coverage==7.11.0",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jplephem==2.23",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.1",
    "matplotlib==3.10.7",
    "numba==0.62.1",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "poliastro==0.7.0",
    "pyerfa==2.0.1.5",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "scipy==1.16.2",
    "six==1.17.0",
    "soupsieve==2.8",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
